# Truck

./: 2173214266_刘佳鑫_自动化钱91.doc  another.py  frame.py  创新组项目设计报告 刘渝 自动化钱91 2191411802 .docx  帧差法.py  报告.docx  绘图.pptx
Another/: CMakeLists.txt
Another/saved/: output.csv  output_dark.csv
Another/src/: another.cpp
saved/: output.csv
旧C++版本/: another.cpp  capture.cpp
